# gitorii

./: .gitlab-ci.yml  BACKLOG.md  CHANGELOG.md  COMMANDS.md  Cargo.toml  README.md  ROADMAP.md  log_gitorii.txt  rust-toolchain.toml
.github/workflows/: release.yml
crates/torii/: Cargo.toml
crates/torii-core/: Cargo.toml
crates/torii-core/src/: error.rs  lib.rs
crates/torii-core/src/cloud/: mod.rs  whoami.rs
crates/torii-core/src/transport/: https.rs  mod.rs  ssh.rs
crates/torii-core/src/util/: auth.rs  config.rs  duration.rs  gpg.rs  graph.rs  hooks.rs  http.rs  mod.rs  oauth.rs  radicle.rs  ssh.rs  toriignore.rs  updater.rs
crates/torii-core/src/vcs/: commit_scan.rs  core.rs  core_extensions.rs  core_tag.rs  history_filter.rs  history_reauthor.rs  history_reword.rs  mod.rs  patch.rs  scanner.rs  sign.rs  snapshot.rs  tag.rs
crates/torii-core/src/versioning/: auto_tag.rs  conventional.rs  mod.rs  semver.rs
crates/torii-core/src/workspace/: mirror.rs  mod.rs  remote.rs  workspace.rs
crates/torii/src/: cli.rs  main.rs
crates/torii/src/cli/: auth.rs  clone.rs  config.rs  fsck.rs  history.rs  ignore.rs  issue.rs  mirror.rs  package.rs  pipeline.rs  platforms.rs  pr.rs  publish.rs  release.rs  remote.rs  repo.rs  runner.rs  scan.rs  sign.rs  snapshot.rs  tag.rs  tui.rs  workspace.rs  wrappers.rs
crates/torii/src/cmd/: archive.rs  bisect.rs  clean.rs  describe.rs  fileops.rs  grep.rs  notes.rs  submodule.rs  subtree.rs  worktree.rs
crates/torii/src/tui/: mod.rs  picker.rs  ui.rs
crates/torii/src/tui/app/: auth.rs  bisect.rs  branch.rs  commit.rs  config.rs  dashboard.rs  diff.rs  history.rs  issue.rs  log.rs  mod.rs  platform.rs  pr.rs  remote.rs  settings.rs  shared.rs  snapshot.rs  submodule.rs  sync.rs  tag.rs  workspace.rs  worktree.rs
crates/torii/src/tui/events/: auth.rs  bisect.rs  branch.rs  commit.rs  config.rs  history.rs  issue.rs  log.rs  mod.rs  platform.rs  pr.rs  remote.rs  snapshot.rs  submodule.rs  tag.rs  workspace.rs  worktree.rs
crates/torii/src/tui/views/: auth.rs  bisect.rs  branch.rs  commit.rs  config.rs  dashboard.rs  diff.rs  help.rs  issue.rs  log.rs  mirror.rs  mod.rs  platform.rs  pr.rs  remote.rs  snapshot.rs  submodule.rs  sync.rs  tag.rs  workspace.rs  worktree.rs
crates/torii/tests/: save_no_tty.rs  sigpipe.rs
docs/: BUG_COMMIT_AUTHOR_FALLBACK.md  BUG_SNAPSHOT_LEAKS_INTO_COMMITS.md  FEATURE_FETCH_SPECIFIC_REMOTE.md
src/: auth.rs  cli.rs  config.rs  core.rs  core_extensions.rs  core_tag.rs  error.rs  gpg.rs  history_reauthor.rs  hooks.rs  issue.rs  main.rs  package.rs  pipeline.rs  pr.rs  radicle.rs  release.rs  remote.rs  snapshot.rs  worktree.rs
src/cloud/: mod.rs
src/cmd/: clean.rs  fileops.rs  mod.rs  submodule.rs  worktree.rs
src/transport/: https.rs  ssh.rs
src/tui/: app.rs  events.rs  mod.rs  picker.rs  ui.rs
src/tui/views/: auth.rs  bisect.rs  log.rs  platform.rs  pr.rs
src/util/: auth.rs  gpg.rs  http.rs  mod.rs  oauth.rs
src/vcs/: core.rs  core_extensions.rs  core_tag.rs  history_reauthor.rs  mod.rs  scanner.rs  sign.rs  snapshot.rs  tag.rs
src/workspace/: mirror.rs  mod.rs  remote.rs
