[workspace]
resolver = "2"
members = ["crates/torii-core", "crates/torii"]

[workspace.package]
version = "0.9.2"
edition = "2021"
rust-version = "1.95"
authors = ["Paski <paski@paski.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/paskidev/gitorii"
homepage = "https://gitorii.com"

[workspace.dependencies]
# Git operations — transports disabled, we provide custom reqwest+russh transports
git2 = { version = "0.19", default-features = false }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
toml = "0.8"
base64 = "0.22"   # Bitbucket Cloud Basic auth header (user:app_password → base64)
sha2 = "0.10"     # OAuth PKCE S256 code-challenge (Bitbucket auth-code flow)

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Platform-specific directories
dirs = "5.0"

# SSH transport (pure Rust, no openssl/libssh2)
russh = "0.61"
tokio = { version = "1", features = ["rt", "io-util", "macros", "net", "sync"] }

# Regex for custom secret patterns in .toriignore + commit-scan policies
regex = "1.10"

tempfile = "3.12"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
